--- a/demo/src/main/resources/static/index.html
+++ b/demo/src/main/resources/static/index.html
@@ -9,5 +9,12 @@
     <h1>
         hello world 
     </h1>
+    <div>
+        <form  action="formData" method="post">
+            <input type="text" name="num1"/>
+            <input type="text" name="num2"/>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
